bleme/api-bleme/base/resources/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-bleme
  labels:
    app: api-bleme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-bleme
  template:
    metadata:
      labels:
        app: api-bleme
    spec:
      containers:
      - name: api-bleme
        image: docker.io/widernest/api-bleme:1.3.7
        ports:
        - containerPort: 80
        volumeMounts:
        - name: api-bleme-config
          mountPath: /usr/lib/bleme/api-bleme/config
          readOnly: true
        livenessProbe:
          httpGet:
            path: /liveness
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 3
      volumes:
      - name: api-bleme-config
        configMap:
          name: api-bleme-config
