bleme/api-bleme/base/resources/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-bleme
  labels:
    app: api-bleme
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '80'
spec:
  selector:
    app: api-bleme
  # type: NodePort
  # type: ExternalName
  # externalName: api.bleme.fr
  ports:
  - name: api-bleme
    port: 80
    targetPort: 80
    # nodePort: 30001
